Fix login button on mobile

--- a/public/app.scss
+++ b/public/app.scss
@@ -135,6 +135,7 @@ $purpleDark: darken(#340040,2%);
   background-color: $purple;
   color: #fff;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .middle{
